Fix feedback buttons spacing

--- a/src/components/LikedStatusInput/LikedStatusInput.module.css
+++ b/src/components/LikedStatusInput/LikedStatusInput.module.css
@@ -5,13 +5,11 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .option {
-    margin: 10px;
-
     width: 50px;
     height: 50px;
     border-radius: 50%;
